--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
 <p>Inspired from Chanel (Obviously). My younger cousin requested this one.</p>
 </fieldset>
 
+<fieldset>
+<figure>
+  <figcaption>Young Koko</figcaption>
+  <img alt="Young Koko" src="youngkoko.png">
+</figure>
+<p>Time travelling the kokonut backwards.</p>
+</fieldset>
+  
 <h3>More Coming Soon!</h3>
 <style>
 img {
