--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
 <p>Time travelling the kokonut backwards.</p>
 </fieldset>
   
+<fieldset>
+<figure>
+  <figcaption>Player Koko</figcaption>
+  <img alt="Player Koko" src="playerkoko.png">
+</figure>
+<p>The kokonut must be in debt!!!</p>
+</fieldset>
+
 <h3>More Coming Soon!</h3>
 <style>
 img {
