--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
 <p>The kokonut must be in debt!!!</p>
 </fieldset>
 
+
+<fieldset>
+<figure>
+  <figcaption>Inverted Koko</figcaption>
+  <img alt="Inverted Koko" src="invertedkoko.png">
+</figure>
+<p>The kokonut is being inverted...</p>
+</fieldset>
+
 <h3>More Coming Soon!</h3>
 <style>
 img {
