--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color: black; font-family: ZCOOL KuaiLe; color: white">
 <link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
 <h1 style="font-family: ZCOOL KuaiLe; color: white">Kappakokonuts - NFT</h1>
-<h2 style="font-family: ZCOOL KuaiLe; color: white">Disclaimer: Some NFTs have not been uploaded yet!!!</h2>
+<h2 style="font-family: ZCOOL KuaiLe; color: white">Disclaimer: Some NFTs have not been uploaded yet and can only be found on the rarible website!!!</h2>
 
 <fieldset>
 <h1><a href="https://rarible.com/user/0xcc96429c4f7613ffeb113ea415a4c72a7b3f82fd">Click Here To Buy Kokonuts!!!</a></h1>
